--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <meta name='viewport' content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="color-scheme" content="only dark" />
   <meta name="description" content="All in one site for Calculators.">
   <title>All Calcis</title>
